# matlab-parallel-server-on-aws

./: LICENSE.md  README.md  matlab-parallel-server-on-aws-iam-policy.json
doc/: license-manager-instructions.md  matlab-parallel-server-on-aws-iam-policy.json  online-licensing-instructions.md
packer/v1/runtime/mwplatforminterfaces/: pyproject.toml
packer/v1/runtime/mwplatforminterfaces/mwplatforminterfaces/: __init__.py  aws_interface.py  cloud_interface.py  constants.py  linux_interface.py  logging_config.py  os_interface.py  windows_interface.py
scripts/: boot-mdcs.sh
templates/: MJS-Cluster-Template-R2018a.json  MJS-Cluster-Template-R2018a_us-east-1.json  MJS-Cluster-Template-R2018b.json  MJS-Cluster-Template-R2018b_us-east-1.json  MJS-Cluster-Template-R2019a_eu-west-1.json  MJS-Cluster-Template-R2019a_us-east-1.json  MJS-Cluster-Template-existing-vpc-R2018a.json  MJS-Cluster-Template-existing-vpc-R2018a_us-east-1.json  MJS-Cluster-Template-existing-vpc-R2018b.json  MJS-Cluster-Template-existing-vpc-R2018b_us-east-1.json  MJS-Cluster-Template-existing-vpc-R2019a.json  MJS-Cluster-Template-existing-vpc-R2019a_eu-west-1.json  MJS-Cluster-Template-existing-vpc-R2019a_us-east-1.json  MJS-Cluster-Template-with-license-manager-R2018a.json  MJS-Cluster-Template-with-license-manager-R2018a_us-east-1.json  MJS-Cluster-Template-with-license-manager-R2018b.json  MJS-Cluster-Template-with-license-manager-R2018b_us-east-1.json  MJS-Cluster-Template-with-license-manager-R2019a_eu-west-1.json  MJS-Cluster-Template-with-license-manager-R2019a_us-east-1.json  (+1 more)
(+103 files in other folders)
